--- a/curves3d/form.ui
+++ b/curves3d/form.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>838</width>
-    <height>520</height>
+    <width>754</width>
+    <height>436</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Curves3D with OpenGL</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
@@ -21,6 +21,12 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>450</width>
+       <height>360</height>
+      </size>
      </property>
     </widget>
    </item>
